# data_analytics_exercise

./: .gitignore  README.md  justfile  main.py  pyproject.toml
notebooks/part1/: pands_begin.ipynb
notebooks/part2/: data_inoutput_01_file_read.ipynb  data_inoutput_02_web_import.ipynb
